--- a/dscov.ipynb
+++ b/dscov.ipynb
@@ -58,6 +58,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Extremely short R primer\n",
+    "\n",
+    " * R objects are assigned using operator `<-`\n",
+    " * R is a vectorized programming language. Can think of vectors as 'a collection of values of the same type.' This means it is designed for performing mathematical operations on entire vectors.\n",
+    " * Also means much slower if trying to run R with for loops like one would do in Python or other languages\n",
+    " * R provides some basic types: double, character, logical, complex and raw. Various packages impelement other types of objects.\n",
+    " * Missing values are represented with `NA`\n",
+    " * Data frames in R have same concept as in Python with pandas. Can build data frame by running `df_name <- data.frame(column name = vector)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1"
+      ],
+      "text/latex": [
+       "1"
+      ],
+      "text/markdown": [
+       "1"
+      ],
+      "text/plain": [
+       "[1] 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>1</li>\n",
+       "\t<li>2</li>\n",
+       "\t<li>3</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1\n",
+       "\\item 2\n",
+       "\\item 3\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1\n",
+       "2. 2\n",
+       "3. 3\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 1 2 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'double'"
+      ],
+      "text/latex": [
+       "'double'"
+      ],
+      "text/markdown": [
+       "'double'"
+      ],
+      "text/plain": [
+       "[1] \"double\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>2</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>4</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 2\n",
+       "\\item 3\n",
+       "\\item 4\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 2\n",
+       "2. 3\n",
+       "3. 4\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 2 3 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x <- 1\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y <- c(1,2,3)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "typeof(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in data.frame(x = c(1, 2, 3), y = c(2, 3)): arguments imply differing number of rows: 3, 2\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in data.frame(x = c(1, 2, 3), y = c(2, 3)): arguments imply differing number of rows: 3, 2\nTraceback:\n",
+      "1. data.frame(x = c(1, 2, 3), y = c(2, 3))",
+      "2. stop(gettextf(\"arguments imply differing number of rows: %s\", \n .     paste(unique(nrows), collapse = \", \")), domain = NA)"
+     ]
+    }
+   ],
+   "source": [
+    "example <- data.frame(x=c(1,2,3),y=c(2,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Visualizing Data\n",
     "\n",
     "Core feature of exploratory data analysis is asking questions about data and searching for answers by visualizing and modeling data. Most questions around what type of variation or covariation occurs between variables."
